--- a/style.css
+++ b/style.css
@@ -5,70 +5,82 @@
 }
 
 #wrapper {
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 100vh;
-    background-color: rgb(244,244,244);
 }
 
 .container {
-    margin: 50px 100px 30px;
+    height: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .container h1 {
     text-align: center;
     font-family: 'Poppins', sans-serif;
     letter-spacing: 2px;
-}
-
-figure {
-    display: inline-block;
+    margin: 20px 0;
 }
 
 .gallery {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
     flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;
+    align-items: flex-start;
     margin: 25px 0 0 0;
 }
 
 .card {
+    width: 32%;
+    height: 100%;
     position: relative;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .card img {
-    width: 23rem;
-    height: 23rem;
-    object-fit: cover;
-    border-radius: 13px;
+    width: 100%;
+    height: 100%;
     filter: grayscale(90%);
-}
-
-.card figcaption {
-    position: absolute;
-    top: 85%;
-    left: 30px;
-    display: none;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 .card:hover {
     transform: scale(1.03);
-    transition: transform 0.5s ease;
-
-    figcaption  {
-        display: block;
-        color: white;
-        font-size: larger;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        font-size: 1.1rem;
-    }
+    filter: drop-shadow(0 0 10px #333);
+    transition: 0.3s;
 }
 
 .card img:hover {
-    filter: grayscale(0);
-    filter: drop-shadow(0 0 10px #333);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+    filter: grayscale(0%);
 }
+
+.card figcaption {
+    position: absolute;
+    top: 78.55%;
+
+    padding: 25px;
+    width: 100%;
+    height: 20%;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    display: none;
+    border-radius: 0 0 10px 10px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+    transition: 0.3s;
+    font-family: 'Poppins', sans-serif;
+} 
+
+.card:hover figcaption {
+        display: block;
+        transform: scale(1.03);
+}
+
+
+
+
